# mysolder-firmware

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  c210.ioc  c210.yaml  prj.conf  prj_release.conf  west.yml
boards/c210_g431/: Kconfig.c210_g431  Kconfig.defconfig  board.yml  c210_g431.dts
boards/c210_g431/support/: openocd.cfg
boards/c210_v2_g431/: Kconfig.c210_v2_g431  Kconfig.defconfig  board.yml  c210_v2_g431.dts
boards/c210_v2t_g431/: Kconfig.c210_v2t_g431  Kconfig.defconfig  board.yml  c210_v2t_g431.dts
boards/c245_g431/: Kconfig.c245_g431  Kconfig.defconfig  board.yml  c245_g431.dts
boards/t12_g431/: Kconfig.defconfig  Kconfig.t12_g431  board.cmake  board.yml  t12_g431.dts
boards/t12_g431/support/: openocd.cfg
src/: app_ui.c  app_ui.h  heater_controller.c  heater_controller.h  main.c  moving_average.c  moving_average.h  pid_controller.c  pid_controller.h  queque.h  sleep_detection.c  sleep_detection.h  temperature_adc.c  temperature_adc.h  usb_pd.c  usb_pd.h
src/tft/: canvas.c  canvas.h  fonts.c  fonts.h
